--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .env
 .prettierignore
+.eslintignore
 .eslintrc.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # dependencies
